# django-snacks

./: pyproject.toml
snacks_project/: README.md  db.sqlite3
snacks_project/snacks/: admin.py  models.py  tests.py  urls.py  views.py
snacks_project/snacks/migrations/: 0001_initial.py
snacks_project/snacks_project/: settings.py  urls.py
snacks_project/templates/: _base.html  about.html  home.html
